# NeuroPath

./: CMakeLists.txt  README.md
NeuroPath/: CMakeLists.txt  NeuroPath.py
